all 'version' information moved to own module - pymel.version
	to compare versions, instead of Version class, use, ie, pymel.version.CURRENT >= pymel.version.v2008
	pymel.mayahook.mayautils.getMayaVersion()/getMayaVersion(extension=True) replaced with pymel.version._installName
	pymel.mayahook.mayautils.getMayaVersion(extension=True) replaced with pymel.version._shortName

Version 0.9.2

CHANGES AND ADDITIONS

added support for 2010 and python 2.6
added basic support for all component types
added a 'removeNamespace' flag to FileReference.importContents()
added support for open-ended time ranges for command like keyframes (Issue 82)
enhanced keyframe function: if both valueChange and timeChange are queried, the result will be a list of (time,value) pairs
added ability to pass a list of types to ls 'type' argument, as you can with listRelatives
added checkLocalArray and checkOtherArray arguments to Attribute.isConnectedTo which will cause the function to also test mulit/array elements
improved core.language.pythonToMel reliability on lists
improved custom virtual class workflow
added functionality to pymel.tools.py2mel for dynamically creating MEL commands based on python functions/classes
added a new module pymel.api.plugins for working with api plugins in a more reasonable and automated fashion
updated eclipse integration documentation


BUGFIXES

fixed importFile, createReference, loadReference, and openFile now return PyNodes when passed returnNewNodes flag (Issue 85)
fixed rare bug with Vista where platform.system was failing during startup (Issue 87)
fixed a bug with plugin loading to intelligently handle when callback does not get a name
fixed optionMenu and optionMenuGrp to return empty lists instead of None
restored core.other.AttributeName.exists method
fixed a bug in 0.7_compatibility_mode
fixed minor bug in listRelatives
fixed a bug where curve command was returning a string instead of a PyNode (Issue 96)


EASY INSTALL IMPROVEMENTS
